--- a/memory.html
+++ b/memory.html
@@ -73,7 +73,7 @@
     document.getElementById("demo").innerHTML = minutes + "m " + seconds + "s ";
     if (distance < 0) {
         clearInterval(x);
-        alert("Your Score is: "+scr+"EXPIRED");
+        alert("Your Score is: "+scr+"\nTime is up!!!");
         var ass=document.getElementById("board");
         var p=document.getElementById("score");
         ass.innerHTML="";
